--- a/charts/invenio/Chart.yaml
+++ b/charts/invenio/Chart.yaml
@@ -12,21 +12,21 @@ keywords:
   - multimedia-library
   - multimedia-repository
 type: application
-version: 0.2.1
+version: 0.2.16
 dependencies:
   - name: opensearch
     condition: opensearch.enabled
-    repository: "oci://registry-1.docker.io/bitnamicharts"
-    version: "1.0.0"
+    repository: "https://opensearch-project.github.io/helm-charts"
+    version: "2.21.0"
   - name: postgresql
     condition: postgresql.enabled
     repository: "oci://registry-1.docker.io/bitnamicharts"
-    version: "14.0.1"
+    version: "15.5.20"
   - name: rabbitmq
     condition: rabbitmq.enabled
     repository: "oci://registry-1.docker.io/bitnamicharts"
-    version: "12.9.3"
+    version: "14.6.6"
   - name: redis
     condition: redis.enabled
     repository: "oci://registry-1.docker.io/bitnamicharts"
-    version: "18.12.0"
+    version: "19.6.4"
